<resources>
    <string name="app_name" translatable="false">Travelling</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="channel">Channel</string>
    <string name="recommend">Recommend</string>
    <string name="timeline">Timeline</string>
    <string name="article_header_image">article header image</string>
    <string name="share">share</string>
    <string name="bookmark">bookmark</string>
    <string name="favorite">favorite</string>
    <string name="open_map">open map</string>
    <string name="please_check_input">please check input</string>
    <string name="wrong_password_or_account">wrong password or account</string>
    <string name="register">No account yet? Create one</string>
    <string name="account">account</string>
    <string name="password">password</string>
    <string name="register_and_login">register and login</string>
    <string name="first_name">first name</string>
    <string name="last_name">last name</string>
    <string name="enter_profile_data">enter profile data</string>
    <string name="next">next</string>
    <string name="login">login</string>
    <string name="notice_remove">you cancel a mark</string>
    <string name="action_undo">UNDO</string>
    <string name="explore">explore</string>
    <string name="category">category</string>
    <string name="search">search</string>
    <string name="search_hint">article name</string>

    <string name="application_information">application information</string>
    <string name="see_application_information">see application information</string>
    <string name="log_out">log out</string>

    <string name="language">language</string>

    <string name="default_language">default language</string>
    <string name="english" translatable="false">English</string>
    <string name="simplified_chinese" translatable="false">简体中文</string>
    <string name="are_you_sure_to_log_out">are you sure to log out?</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="click_profile_image_to_login">click profile image to login</string>
    <string name="profile">profile</string>
    <string name="choose_user_password">Choose user password</string>
    <string name="enter_user_profile">Enter user profile</string>
    <string name="article">article</string>
    <string name="no_data">no data</string>
    <string-array name="languages">
        <item>@string/default_language</item>
        <item>@string/simplified_chinese</item>
        <item>@string/english</item>
    </string-array>
</resources>
