<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.authentication.EnterUserProfileFragment"
    android:background="@color/colorPrimary">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="0dp"
        android:layout_height="147dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="128dp"
        android:layout_marginEnd="64dp"
        android:scaleType="centerInside"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_first_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="@dimen/tv_header_margin"
        android:layout_marginEnd="64dp"
        android:ems="10"
        android:hint="@string/first_name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColor="@color/text"
        android:textColorHint="@color/secondaryText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <EditText
        android:id="@+id/et_last_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/last_name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColor="@color/text"
        android:textColorHint="@color/secondaryText"
        app:layout_constraintEnd_toEndOf="@+id/et_first_name"
        app:layout_constraintStart_toStartOf="@+id/et_first_name"
        app:layout_constraintTop_toBottomOf="@+id/et_first_name" />

    <Button
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/text"
        android:id="@+id/nav_chooseUserPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/next"
        app:layout_constraintEnd_toEndOf="@+id/et_last_name"
        app:layout_constraintStart_toStartOf="@+id/et_last_name"
        app:layout_constraintTop_toBottomOf="@+id/et_last_name" />

</androidx.constraintlayout.widget.ConstraintLayout>