<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="article"
            type="com.travelling.datasource.entity.Article" />
        <variable
            name="handler"
            type="com.travelling.ui.articles.AbstractArticleRecyclerViewFragment.ArticleHandler" />
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/item_margin">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/cardViewBackground">

            <ImageView
                android:onClick="@{view -> handler.navToArticle(view, article)}"
                android:id="@+id/article_header_image"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:contentDescription="@string/article_header_image"
                android:scaleType="centerCrop"
                android:tint="@color/imageViewTint"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/backgrounds/scenic" />

            <ImageButton
                android:onClick="@{() -> handler.shareButtonClicked(article)}"
                android:id="@+id/share_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="8dp"
                android:background="@color/transparent"
                android:contentDescription="@string/share"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/article_header_image"
                app:srcCompat="@drawable/ic_share_grey_800_24dp" />

            <ImageButton
                android:onClick="@{() -> handler.bookmarkButtonClicked(article)}"
                android:id="@+id/bookmark_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="8dp"
                android:background="@color/transparent"
                android:contentDescription="@string/bookmark"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/share_button"
                app:layout_constraintTop_toBottomOf="@+id/article_header_image"
                tools:srcCompat="@drawable/ic_bookmark_grey_800_24dp"
                app:srcCompat="@{article.bookmark ? @drawable/ic_bookmark_pink_800_24dp :@drawable/ic_bookmark_grey_800_24dp}" />

            <ImageButton
                android:onClick="@{() -> handler.favoriteButtonClicked(article)}"
                android:id="@+id/favorite_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="8dp"
                android:background="@color/transparent"
                android:contentDescription="@string/favorite"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/bookmark_button"
                app:layout_constraintTop_toBottomOf="@+id/article_header_image"
                tools:src="@drawable/ic_favorite_grey_800_24dp"
                app:srcCompat="@{article.favorite ? @drawable/ic_favorite_pink_800_24dp : @drawable/ic_favorite_grey_800_24dp}" />

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="16dp"
                android:text="@{article.title}"
                android:textColor="@color/title"
                android:textSize="30sp"
                app:layout_constraintBottom_toBottomOf="@+id/article_header_image"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="title" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</layout>
