<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="article"
            type="com.travelling.datasource.entity.Article" />

        <variable
            name="handler"
            type="com.travelling.ui.ArticleFragment.ArticleHandler" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:fitsSystemWindows="true">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapsingToolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:collapsedTitleTextAppearance="@style/TextAppearance.AppCompat.Title"
                app:contentScrim="?attr/colorPrimary"
                app:expandedTitleMarginEnd="10dp"
                app:expandedTitleMarginStart="10dp"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:title="@{article.title}">

                <ImageView
                    android:id="@+id/article_header_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:tint="@color/imageViewTint"
                    app:layout_collapseMode="parallax"
                    app:layout_collapseParallaxMultiplier="0.5"
                    tools:ignore="ContentDescription"
                    tools:srcCompat="@tools:sample/backgrounds/scenic" />

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/article_toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_collapseMode="pin" />

            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nestedScrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <WebView
                android:id="@+id/web_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp">

            </WebView>
        </androidx.core.widget.NestedScrollView>

        <View
            android:id="@+id/fabBGLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorTransBg"
            android:onClick="@{() -> handler.closeMenu()}"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/fab_favorite_Layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="@dimen/standard_23"
            android:layout_marginBottom="@dimen/standard_23"
            android:clipToPadding="false"
            android:gravity="center_vertical"
            android:padding="@dimen/standard_12"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/favorite"
                android:textColor="@color/fabTextColor" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_favorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:backgroundTint="@color/fabBackground"
                android:onClick="@{() -> handler.favoriteButtonClicked()}"
                app:borderWidth="0dp"
                app:fabSize="mini"
                app:srcCompat="@{article.favorite ? @drawable/ic_favorite_pink_800_24dp : @drawable/ic_favorite_white_24dp}"
                tools:srcCompat="@drawable/ic_favorite_pink_800_24dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/fab_bookmark_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="@dimen/standard_23"
            android:layout_marginBottom="@dimen/standard_23"
            android:clipToPadding="false"
            android:gravity="center_vertical"
            android:padding="@dimen/standard_12"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bookmark"
                android:textColor="@color/fabTextColor" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_bookmark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:backgroundTint="@color/fabBackground"
                android:onClick="@{() -> handler.bookmarkButtonClicked()}"
                app:borderWidth="0dp"
                app:fabSize="mini"
                app:srcCompat="@{article.bookmark ? @drawable/ic_bookmark_pink_800_24dp :@drawable/ic_bookmark_white_24dp}"
                tools:srcCompat="@drawable/ic_bookmark_pink_800_24dp" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/fab_share_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="@dimen/standard_23"
            android:layout_marginBottom="@dimen/standard_23"
            android:clipToPadding="false"
            android:gravity="center_vertical"
            android:padding="@dimen/standard_12"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/share"
                android:textColor="@color/fabTextColor" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:onClick="@{() -> handler.shareButtonClicked()}"
                android:id="@+id/fab_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:backgroundTint="@color/fabBackground"
                android:tint="@android:color/white"
                app:borderWidth="0dp"
                app:fabSize="mini"
                app:srcCompat="@drawable/ic_share_grey_800_24dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/fab_map_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="@dimen/standard_23"
            android:layout_marginBottom="@dimen/standard_23"
            android:clipToPadding="false"
            android:gravity="center_vertical"
            android:padding="@dimen/standard_12"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/open_map"
                android:textColor="@color/fabTextColor" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_map"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:backgroundTint="@color/fabBackground"
                android:onClick="@{() -> handler.mapButtonClicked()}"
                android:tint="@android:color/white"
                app:borderWidth="0dp"
                app:fabSize="mini"
                app:srcCompat="@drawable/ic_map_white_24dp"
                tools:srcCompat="@drawable/ic_map_white_24dp" />
        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="@dimen/standard_23"
            android:layout_marginBottom="@dimen/standard_23"
            android:gravity="center_vertical"
            android:onClick="@{() -> handler.floatMenu()}"
            app:fabSize="normal"
            app:layout_behavior=".ui.FabScrollBehavior"
            app:srcCompat="@drawable/ic_add_white_24dp" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>
